--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -350,6 +350,10 @@
     "defaultMessage": "Password changed successfully",
     "description": "Password changed text"
   },
+  "H9m7jW": {
+    "defaultMessage": "{timeSpent}",
+    "description": "Time Spent"
+  },
   "HAlOn1": {
     "defaultMessage": "Name"
   },
@@ -767,6 +771,10 @@
     "defaultMessage": "Forgot Password",
     "description": "Forgot Password Heading"
   },
+  "jZl4zg": {
+    "defaultMessage": "{xp}",
+    "description": "XP"
+  },
   "k6tlKQ": {
     "defaultMessage": "Ok",
     "description": "closing modal button"
@@ -830,6 +838,10 @@
   "nT6Ql7": {
     "defaultMessage": "{text}",
     "description": "help type text"
+  },
+  "njn/ZL": {
+    "defaultMessage": "XP",
+    "description": "XP"
   },
   "nlYt8p": {
     "defaultMessage": "View more",
@@ -901,6 +913,10 @@
   "swkU6w": {
     "defaultMessage": "Go to Home",
     "description": "Link description"
+  },
+  "tRGm5z": {
+    "defaultMessage": "Time Spent:",
+    "description": "Time Spent"
   },
   "tbPLF3": {
     "defaultMessage": "{step}",
