--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -126,9 +126,17 @@
     "defaultMessage": "Please connect to the internet.",
     "description": "offline message"
   },
+  "52hsYP": {
+    "defaultMessage": "#{rank}",
+    "description": "Rank"
+  },
   "53f59E": {
     "defaultMessage": "Rank",
     "description": "Rank table cell header"
+  },
+  "5EmC6p": {
+    "defaultMessage": "Student Name",
+    "description": "Student Name"
   },
   "5L6FVQ": {
     "defaultMessage": "Password",
@@ -205,6 +213,10 @@
   "AhFvSt": {
     "defaultMessage": "Login with Email",
     "description": "Login with Email tab"
+  },
+  "Atd3d5": {
+    "defaultMessage": "/{totalSubmissions}",
+    "description": "Total Submissions"
   },
   "B7znij": {
     "defaultMessage": "Create a New Account",
@@ -289,6 +301,10 @@
   "H2rvzb": {
     "defaultMessage": "Password changed successfully",
     "description": "Password changed text"
+  },
+  "H9m7jW": {
+    "defaultMessage": "{timeSpent}",
+    "description": "Time Spent"
   },
   "HAlOn1": {
     "defaultMessage": "Name"
@@ -545,6 +561,10 @@
     "defaultMessage": "Edit Profile",
     "description": "Home card menu"
   },
+  "YRA/RQ": {
+    "defaultMessage": "{username}",
+    "description": "Username"
+  },
   "YxMMzC": {
     "defaultMessage": "All Games",
     "description": "Game Progress card menu"
@@ -569,9 +589,17 @@
     "defaultMessage": "Create a New Account",
     "description": "Create Account Button"
   },
+  "a8vHtW": {
+    "defaultMessage": "{studentNamt}",
+    "description": "Student Name"
+  },
   "aWjMjy": {
     "defaultMessage": "Register",
     "description": "Register button"
+  },
+  "apr16P": {
+    "defaultMessage": "Leaderboard",
+    "description": "Leaderboard Title"
   },
   "b2J6mh": {
     "defaultMessage": "Home",
@@ -612,6 +640,10 @@
     "defaultMessage": "Profile updated successfully",
     "description": "success modal"
   },
+  "esK7Em": {
+    "defaultMessage": "Earned Awards",
+    "description": "Earned Awards"
+  },
   "f1vl6A": {
     "defaultMessage": "Show Leaderboard",
     "description": "show leaderboard"
@@ -619,6 +651,13 @@
   "fOZCSk": {
     "defaultMessage": "Set a Password",
     "description": "Set password label"
+  },
+  "fT7uau": {
+    "defaultMessage": "completed"
+  },
+  "fr893W": {
+    "defaultMessage": "{validSubmissions}",
+    "description": "Valid Submissions"
   },
   "g0zp7w": {
     "defaultMessage": "Continue Playing",
@@ -660,6 +699,10 @@
     "defaultMessage": "Forgot Password",
     "description": "Forgot Password Heading"
   },
+  "jZl4zg": {
+    "defaultMessage": "{xp}",
+    "description": "XP"
+  },
   "k6tlKQ": {
     "defaultMessage": "Ok",
     "description": "closing modal button"
@@ -692,6 +735,10 @@
     "defaultMessage": "Session expired",
     "description": "Not authorized message"
   },
+  "mb5De+": {
+    "defaultMessage": "Rank",
+    "description": "Rank"
+  },
   "mm9QaY": {
     "defaultMessage": "School",
     "description": "Profile school label"
@@ -708,9 +755,17 @@
     "defaultMessage": "Get the rare collectibles with your coins now",
     "description": "more card title"
   },
+  "nGT7h4": {
+    "defaultMessage": "Scoreboard",
+    "description": "Leaderboard button"
+  },
   "nT6Ql7": {
     "defaultMessage": "{text}",
     "description": "help type text"
+  },
+  "njn/ZL": {
+    "defaultMessage": "XP",
+    "description": "XP"
   },
   "nlYt8p": {
     "defaultMessage": "View more",
@@ -740,6 +795,10 @@
     "defaultMessage": "Go to Home",
     "description": "Home Navigation Button"
   },
+  "qTQ8nP": {
+    "defaultMessage": "{coinsEarned}",
+    "description": "Coins Earned"
+  },
   "qXTiEd": {
     "defaultMessage": "Grade"
   },
@@ -766,6 +825,10 @@
   "swkU6w": {
     "defaultMessage": "Go to Home",
     "description": "Link description"
+  },
+  "tRGm5z": {
+    "defaultMessage": "Time Spent:",
+    "description": "Time Spent"
   },
   "tbPLF3": {
     "defaultMessage": "{step}",
