--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,17 +7,21 @@
     "defaultMessage": "Email",
     "description": "Email Button Title"
   },
+  "+U3h21": {
+    "defaultMessage": "Keep the code changes",
+    "description": "keep the code changes modal title"
+  },
   "+g4yFF": {
     "defaultMessage": "Logout",
     "description": "more menu button"
   },
-  "/EsQT0": {
-    "defaultMessage": "This is games page",
-    "description": "Games Page"
-  },
   "/Gy7qZ": {
     "defaultMessage": "Level {levelNumber}",
     "description": "Level indicator"
+  },
+  "/Id/lz": {
+    "defaultMessage": "Yes",
+    "description": "logout"
   },
   "/dnxym": {
     "defaultMessage": "Create a New Account",
@@ -142,6 +146,10 @@
     "defaultMessage": "Next",
     "description": "Next Button"
   },
+  "6kktdG": {
+    "defaultMessage": "Output will be shown here",
+    "description": "placeholder"
+  },
   "6oGVMu": {
     "defaultMessage": "Awesome!",
     "description": "Success message"
@@ -161,6 +169,14 @@
   "8R6f04": {
     "defaultMessage": "Coming Soon...",
     "description": "Challenges Page"
+  },
+  "9+2Mm0": {
+    "defaultMessage": "IDE",
+    "description": "page title"
+  },
+  "9BVOVU": {
+    "defaultMessage": "Please verify to continue",
+    "description": "Recaptcha Modal heading"
   },
   "9NID4X": {
     "defaultMessage": "OK",
@@ -222,6 +238,10 @@
     "defaultMessage": "Coins Earned:",
     "description": "Coins Earned"
   },
+  "CfsqV9": {
+    "defaultMessage": "All Games",
+    "description": "Games Page"
+  },
   "Ciol6I": {
     "defaultMessage": "Output",
     "description": "Output"
@@ -265,6 +285,10 @@
   "FhTUgw": {
     "defaultMessage": "Not {phone} ?",
     "description": "not button"
+  },
+  "Fl1ECE": {
+    "defaultMessage": "Level {level}",
+    "description": "Level navigation link"
   },
   "FoTGQE": {
     "defaultMessage": "Go to Login",
@@ -321,6 +345,10 @@
     "defaultMessage": "OTP",
     "description": "OTP label"
   },
+  "K+HWzs": {
+    "defaultMessage": "Console",
+    "description": "code button text"
+  },
   "KD6lRu": {
     "defaultMessage": "Continue",
     "description": "Continue button"
@@ -360,6 +388,10 @@
   "Nn5oAD": {
     "defaultMessage": "Go to login",
     "description": "Go to login button"
+  },
+  "NsygW3": {
+    "defaultMessage": "Run",
+    "description": "Run code button"
   },
   "O1sXEv": {
     "defaultMessage": "Collections",
@@ -525,6 +557,10 @@
     "defaultMessage": "Please login again",
     "description": "Not authorized message"
   },
+  "XVQ4du": {
+    "defaultMessage": "No",
+    "description": "no button text"
+  },
   "Y+dh5z": {
     "defaultMessage": "Edit Profile",
     "description": "Home card menu"
@@ -592,6 +628,10 @@
     "defaultMessage": "Yes",
     "description": "logout yes btn"
   },
+  "dreQIo": {
+    "defaultMessage": "Inputs",
+    "description": "input draw btn"
+  },
   "e5Eaen": {
     "defaultMessage": "Profile updated successfully",
     "description": "success modal"
@@ -603,6 +643,10 @@
   "fOZCSk": {
     "defaultMessage": "Set a Password",
     "description": "Set password label"
+  },
+  "fcrHSq": {
+    "defaultMessage": "{languageDisplayName}",
+    "description": "language option"
   },
   "g0zp7w": {
     "defaultMessage": "Continue Playing",
@@ -672,6 +716,10 @@
     "defaultMessage": "OTP",
     "description": "OTP Label"
   },
+  "mMH50/": {
+    "defaultMessage": "Code",
+    "description": "code button text"
+  },
   "mTY3Hn": {
     "defaultMessage": "Session expired",
     "description": "Not authorized message"
@@ -700,9 +748,17 @@
     "defaultMessage": "View more",
     "description": "View More Bottomsheet Btn"
   },
+  "nsIAsY": {
+    "defaultMessage": "Run",
+    "description": "run code button text"
+  },
   "o2jxWd": {
     "defaultMessage": "Account Settings",
     "description": "more menu button"
+  },
+  "oDenEU": {
+    "defaultMessage": "Turtle",
+    "description": "Turtle Game Title"
   },
   "oOZkkL": {
     "defaultMessage": "Coming Soon...",
@@ -719,10 +775,6 @@
   "pwy4hs": {
     "defaultMessage": "Game Progress",
     "description": "Game Progress card heading"
-  },
-  "q86PwV": {
-    "defaultMessage": "Go to Home",
-    "description": "Home Navigation Button"
   },
   "qUU2pp": {
     "defaultMessage": "All Games",
@@ -742,6 +794,10 @@
   "rZKLPy": {
     "defaultMessage": "Copy Link",
     "description": "Copy Link button"
+  },
+  "sC1GR3": {
+    "defaultMessage": "Yes",
+    "description": "yes button text"
   },
   "sNqwYF": {
     "defaultMessage": "Logout",
@@ -774,10 +830,6 @@
   "vY562d": {
     "defaultMessage": "Try the new in-built IDE",
     "description": "more card title"
-  },
-  "viQX0N": {
-    "defaultMessage": "Turtle",
-    "description": "Game Title"
   },
   "viQX0N": {
     "defaultMessage": "Turtle",
