use only one run btn click handler for both mobile and desktop, show full screen loading in both instead of inline

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -166,6 +166,10 @@
     "defaultMessage": "Play",
     "description": "Turtle Play Button"
   },
+  "7mn7eO": {
+    "defaultMessage": "Output will appear here",
+    "description": "output placeholder"
+  },
   "8R6f04": {
     "defaultMessage": "Coming Soon...",
     "description": "Challenges Page"
