first working draft of react-native IDE

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -345,6 +345,10 @@
     "defaultMessage": "{errorMessage}",
     "description": "error text"
   },
+  "Iyx0jU": {
+    "defaultMessage": "Output",
+    "description": "main output label"
+  },
   "JnwRMJ": {
     "defaultMessage": "OTP",
     "description": "OTP label"
@@ -352,6 +356,10 @@
   "K+HWzs": {
     "defaultMessage": "Console",
     "description": "code button text"
+  },
+  "K6/Xyh": {
+    "defaultMessage": "{memory}",
+    "description": "memory used"
   },
   "KD6lRu": {
     "defaultMessage": "Continue",
@@ -565,6 +573,10 @@
     "defaultMessage": "No",
     "description": "no button text"
   },
+  "XrpVOM": {
+    "defaultMessage": "{output}",
+    "description": "main output"
+  },
   "Y+dh5z": {
     "defaultMessage": "Edit Profile",
     "description": "Home card menu"
@@ -635,6 +647,10 @@
   "dreQIo": {
     "defaultMessage": "Inputs",
     "description": "input draw btn"
+  },
+  "dtriXn": {
+    "defaultMessage": "Try Now",
+    "description": "More card button text"
   },
   "e5Eaen": {
     "defaultMessage": "Profile updated successfully",
@@ -772,6 +788,10 @@
     "defaultMessage": "Account Settings",
     "description": "account settings CTA"
   },
+  "pQM50G": {
+    "defaultMessage": "{executionTime}",
+    "description": "execution time"
+  },
   "pVIk7O": {
     "defaultMessage": "Turtle",
     "description": "Turtle title"
@@ -790,6 +810,10 @@
   "quRCCv": {
     "defaultMessage": "Phone",
     "description": "Phone label"
+  },
+  "quv5CI": {
+    "defaultMessage": "Memory",
+    "description": "memory label"
   },
   "rECW1h": {
     "defaultMessage": "completed",
@@ -811,6 +835,10 @@
     "defaultMessage": "Go to Home",
     "description": "Link description"
   },
+  "t5hBAx": {
+    "defaultMessage": "Output will be shown here",
+    "description": "output box placeholder text"
+  },
   "tbPLF3": {
     "defaultMessage": "{step}",
     "description": "turtle instruction"
@@ -823,9 +851,17 @@
     "defaultMessage": "{message}",
     "description": "Success message"
   },
+  "uPz4GT": {
+    "defaultMessage": "Run",
+    "description": "name"
+  },
   "uhayi4": {
     "defaultMessage": "{errorMessage}",
     "description": "email form helper"
+  },
+  "uipkRi": {
+    "defaultMessage": "Inputs",
+    "description": "Input drawer title"
   },
   "vChW6P": {
     "defaultMessage": "Show Leaderboard",
@@ -870,6 +906,10 @@
   "yCTEJz": {
     "defaultMessage": "{hintMessage}",
     "description": "Hint message"
+  },
+  "yGiS9f": {
+    "defaultMessage": "Execution Time",
+    "description": "execution time label"
   },
   "yujxGL": {
     "defaultMessage": "Your Collections and Perks",
