--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -302,10 +302,6 @@
     "defaultMessage": "Password changed successfully",
     "description": "Password changed text"
   },
-  "H9m7jW": {
-    "defaultMessage": "{timeSpent}",
-    "description": "Time Spent"
-  },
   "HAlOn1": {
     "defaultMessage": "Name"
   },
@@ -667,6 +663,10 @@
     "defaultMessage": "Login Into Existing Account",
     "description": "Login Into existing account button"
   },
+  "g8RtbX": {
+    "defaultMessage": "Coins",
+    "description": "Coins"
+  },
   "gOkIvb": {
     "defaultMessage": "Name",
     "description": "Name label"
@@ -698,10 +698,6 @@
   "jZhy7I": {
     "defaultMessage": "Forgot Password",
     "description": "Forgot Password Heading"
-  },
-  "jZl4zg": {
-    "defaultMessage": "{xp}",
-    "description": "XP"
   },
   "k6tlKQ": {
     "defaultMessage": "Ok",
@@ -763,10 +759,6 @@
     "defaultMessage": "{text}",
     "description": "help type text"
   },
-  "njn/ZL": {
-    "defaultMessage": "XP",
-    "description": "XP"
-  },
   "nlYt8p": {
     "defaultMessage": "View more",
     "description": "View More Bottomsheet Btn"
@@ -825,10 +817,6 @@
   "swkU6w": {
     "defaultMessage": "Go to Home",
     "description": "Link description"
-  },
-  "tRGm5z": {
-    "defaultMessage": "Time Spent:",
-    "description": "Time Spent"
   },
   "tbPLF3": {
     "defaultMessage": "{step}",
