--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -346,10 +346,6 @@
     "defaultMessage": "Password changed successfully",
     "description": "Password changed text"
   },
-  "H9m7jW": {
-    "defaultMessage": "{timeSpent}",
-    "description": "Time Spent"
-  },
   "HAlOn1": {
     "defaultMessage": "Name"
   },
@@ -735,6 +731,10 @@
     "defaultMessage": "Login Into Existing Account",
     "description": "Login Into existing account button"
   },
+  "g8RtbX": {
+    "defaultMessage": "Coins",
+    "description": "Coins"
+  },
   "gOkIvb": {
     "defaultMessage": "Name",
     "description": "Name label"
@@ -766,10 +766,6 @@
   "jZhy7I": {
     "defaultMessage": "Forgot Password",
     "description": "Forgot Password Heading"
-  },
-  "jZl4zg": {
-    "defaultMessage": "{xp}",
-    "description": "XP"
   },
   "k6tlKQ": {
     "defaultMessage": "Ok",
@@ -834,10 +830,6 @@
   "nT6Ql7": {
     "defaultMessage": "{text}",
     "description": "help type text"
-  },
-  "njn/ZL": {
-    "defaultMessage": "XP",
-    "description": "XP"
   },
   "nlYt8p": {
     "defaultMessage": "View more",
@@ -909,10 +901,6 @@
   "swkU6w": {
     "defaultMessage": "Go to Home",
     "description": "Link description"
-  },
-  "tRGm5z": {
-    "defaultMessage": "Time Spent:",
-    "description": "Time Spent"
   },
   "tbPLF3": {
     "defaultMessage": "{step}",
