--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,13 +11,13 @@
     "defaultMessage": "Logout",
     "description": "more menu button"
   },
-  "/EsQT0": {
-    "defaultMessage": "This is games page",
-    "description": "Games Page"
-  },
   "/Gy7qZ": {
     "defaultMessage": "Level {levelNumber}",
     "description": "Level indicator"
+  },
+  "/Id/lz": {
+    "defaultMessage": "Yes",
+    "description": "logout"
   },
   "/dnxym": {
     "defaultMessage": "Create a New Account",
@@ -162,6 +162,10 @@
     "defaultMessage": "Coming Soon...",
     "description": "Challenges Page"
   },
+  "9BVOVU": {
+    "defaultMessage": "Please verify to continue",
+    "description": "Recaptcha Modal heading"
+  },
   "9NID4X": {
     "defaultMessage": "OK",
     "description": "OK"
@@ -222,6 +226,10 @@
     "defaultMessage": "Coins Earned:",
     "description": "Coins Earned"
   },
+  "CfsqV9": {
+    "defaultMessage": "All Games",
+    "description": "Games Page"
+  },
   "Ciol6I": {
     "defaultMessage": "Output",
     "description": "Output"
@@ -265,6 +273,10 @@
   "FhTUgw": {
     "defaultMessage": "Not {phone} ?",
     "description": "not button"
+  },
+  "Fl1ECE": {
+    "defaultMessage": "Level {level}",
+    "description": "Level navigation link"
   },
   "FoTGQE": {
     "defaultMessage": "Go to Login",
@@ -704,6 +716,10 @@
     "defaultMessage": "Account Settings",
     "description": "more menu button"
   },
+  "oDenEU": {
+    "defaultMessage": "Turtle",
+    "description": "Turtle Game Title"
+  },
   "oOZkkL": {
     "defaultMessage": "Coming Soon...",
     "description": "Class Page"
@@ -719,10 +735,6 @@
   "pwy4hs": {
     "defaultMessage": "Game Progress",
     "description": "Game Progress card heading"
-  },
-  "q86PwV": {
-    "defaultMessage": "Go to Home",
-    "description": "Home Navigation Button"
   },
   "qUU2pp": {
     "defaultMessage": "All Games",
@@ -774,10 +786,6 @@
   "vY562d": {
     "defaultMessage": "Try the new in-built IDE",
     "description": "more card title"
-  },
-  "viQX0N": {
-    "defaultMessage": "Turtle",
-    "description": "Game Title"
   },
   "viQX0N": {
     "defaultMessage": "Turtle",
