--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -261,6 +261,10 @@
     "defaultMessage": "Please verify to continue",
     "description": "Recaptcha Modal heading"
   },
+  "9BVOVU": {
+    "defaultMessage": "Please verify to continue",
+    "description": "Recaptcha Modal heading"
+  },
   "9NID4X": {
     "defaultMessage": "OK",
     "description": "OK"
@@ -344,6 +348,10 @@
   "CcB4fo": {
     "defaultMessage": "Coins Earned:",
     "description": "Coins Earned"
+  },
+  "CfsqV9": {
+    "defaultMessage": "All Games",
+    "description": "Games Page"
   },
   "Ciol6I": {
     "defaultMessage": "Output",
@@ -1147,6 +1155,10 @@
   "o2jxWd": {
     "defaultMessage": "Account Settings",
     "description": "more menu button"
+  },
+  "oDenEU": {
+    "defaultMessage": "Turtle",
+    "description": "Turtle Game Title"
   },
   "oOZkkL": {
     "defaultMessage": "Coming Soon...",
