CU-2t8nwhg_Course-Video-Page_santhosh

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -257,6 +257,10 @@
     "defaultMessage": "Please verify to continue",
     "description": "Recaptcha Modal heading"
   },
+  "9BVOVU": {
+    "defaultMessage": "Please verify to continue",
+    "description": "Recaptcha Modal heading"
+  },
   "9NID4X": {
     "defaultMessage": "OK",
     "description": "OK"
