--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -318,6 +318,10 @@
     "defaultMessage": "Home",
     "description": "home heading"
   },
+  "FKN6N8": {
+    "defaultMessage": "Add a block",
+    "description": "Add a block title"
+  },
   "FhTUgw": {
     "defaultMessage": "Not {phone} ?",
     "description": "not button"
