--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -51,6 +51,10 @@
     "defaultMessage": "Login with Phone",
     "description": "login with phone tab"
   },
+  "/yRdu/": {
+    "defaultMessage": "Start Playing",
+    "description": "Play button"
+  },
   "01Q2N+": {
     "defaultMessage": "Coming Soon...",
     "description": "More options Page"
@@ -314,10 +318,6 @@
     "defaultMessage": "Home",
     "description": "home heading"
   },
-  "FKN6N8": {
-    "defaultMessage": "Add a block",
-    "description": "Add a block title"
-  },
   "FhTUgw": {
     "defaultMessage": "Not {phone} ?",
     "description": "not button"
@@ -504,10 +504,6 @@
   "SL6O2c": {
     "defaultMessage": "Password",
     "description": "Password label"
-  },
-  "SjoZlV": {
-    "defaultMessage": "Play Now",
-    "description": "Play button"
   },
   "SpftNg": {
     "defaultMessage": "{errorMessage}",
